--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -3,9 +3,25 @@
 {% block content %}
   <h1>Projects Template</h1>
 
-  <ul>
+  <table>
+    <tr>
+      <th>Project</th>
+      <th>Positive Votes</th>
+      <th>Votes</th>
+      <th>Created</th>
+      <th></th>
+      <th></th>
+    </tr>
     {% for project in projects %}
-      <li><a href="{% url 'project' project.id %}">{{ project.title }}</a> -- </li>
+    <tr>
+      <td>{{ project.title }}</td>
+      <td>{{ project.vote_ratio }}%</td>
+      <td>{{ project.vote_total }}</td>
+      <td>{{ project.created }}</td>
+      <td><a href="{% url 'update-project' project.pk %}">Edit</a></td>
+      <td><a href="{% url 'delete-project' project.pk %}">Delete</a></td>
+      <td><a href="{% url 'project' project.pk %}">View</a></td>
+    </tr>
     {% endfor %}
-  </ul>
+  </table>
 {% endblock content %}
