--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -1,6 +1,7 @@
 {% extends 'main.html' %}
 
 {% block content %}
+  <img style="max-width: 500px;" src="{{ project.featured_image.url }}" alt="">
   <h1>{{ project.title }}</h1>
 
   {% for tag in tags %}
