--- a/templates/main.html
+++ b/templates/main.html
@@ -1,16 +1,20 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-{% include 'navbar.html' %}
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+    <title>Document</title>
+  </head>
+  <body>
+  {% include 'navbar.html' %}
 
-{% block content %}
+  {% block content %}
 
-{% endblock content %}
-</body>
+  {% endblock content %}
+
+  <p>FOOTER</p>
+  </body>
 </html>
