--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -1,13 +1,25 @@
 {% extends 'main.html' %}
 
 {% block content %}
+  {% if page == 'register' %}
+    <h1>Register</h1>
+    <form action="{% url 'register' %}" method="POST">
+      {% csrf_token %}
 
-  <form action="{% url 'login' %}" method="POST">
-    {% csrf_token %}
-    <input type="text" name="username" placeholder="Username">
-    <input type="password" name="password" placeholder="Enter Password">
-    <input type="submit" value="Login">
-  </form>
+      {{form.as_p}}
+      <input type="submit" value="Register">
+    </form>
+    <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+  {% else %}
+    <form action="{% url 'login' %}" method="POST">
+      {% csrf_token %}
+      <input type="text" name="username" placeholder="Username">
+      <input type="password" name="password" placeholder="Enter Password">
+      <input type="submit" value="Login">
+
+      <p>Don't have an account? <a href="{% url 'register' %}">Sign Up</a></p>
+    </form>
+  {% endif %}
 
 {% endblock content %}
 
