--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -845,3 +845,16 @@ img {
   margin-bottom: 1rem;
   margin-top: 2rem;
 }
+
+
+/*=======================
+  Error Alerts
+========================*/
+
+.alert {
+  position: fixed;
+  left: 50%;
+  top: 135px;
+  transform: translate(-50%, -50%);
+  z-index: 99999;
+}
