--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -10,11 +10,11 @@
         </div>
 
         <div class="hero-section__search">
-          <form class="form" action="#" method="get">
+          <form class="form" action="{% url 'profiles' %}" method="GET">
             <div class="form__field">
               <label for="formInput#search">Search Developers</label>
-              <input class="input input--text" id="formInput#search" type="text" name="text"
-                placeholder="Search by developer name" />
+              <input class="input input--text" id="formInput#search" type="text" name="search_query"
+                value="{{ search_query }}" placeholder="Search by developer name" />
             </div>
 
             <input class="btn btn--sub btn--lg" type="submit" value="Search" />
@@ -33,7 +33,7 @@
                   <div class="dev__profile">
                     <img class="avatar avatar--md" src="{{ profile.profile_image.url }}" alt="image" />
                     <div class="dev__meta">
-                      <h3>{{ profile.username }}</h3>
+                      <h3>{{ profile.name }}</h3>
                       <h5>{{ profile.short_intro|slice:"60" }}</h5>
                     </div>
                   </div>
