refined reviews section

--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -54,7 +54,7 @@
           <p>Hello Developer, Welcome Back!</p>
         </div>
 
-        <form class="form auth__form" action="{% url 'login' %}" method="POST">
+        <form class="form auth__form" action="" method="POST">
          {% csrf_token %}
 
           <div class="form__field">
